feat: force_password_change flag in convertor
